buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    }
}

apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'

group = pluginGroup
version = pluginVersion

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven { 
    	url 'https://jitpack.io'
    }
    maven {
    	url 'https://mvnrepository.com/artifact/com.h2database/h2'
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
    implementation fileTree(include: ['*.jar'], dir: 'libs')
}

shadowJar {
    dependencies {
        include dependency("com.h2database:h2:1.4.200")
    }
    relocate 'org.h2', 'org.trentech.easykits.h2'
    archiveFileName = "easykits-${project.version}.jar"
}

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}
